# t3

./: .gitattributes  .gitignore  AUTHORS.md  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/: .gitignore  Makefile  Makefile.am  Makefile.in  SDL_err_ext.c  SDL_err_ext.h  defs.h  dimensions.h  field.c  field.h  main.c  pt.c  pt.h  t3  tile.c  tile.h
src/.deps/: SDL_err_ext.Po  main.Po
